<resources>
    <string name="app_name">USTH Weather</string>
    <string name="weather_activity" />
    <string name="update_weather" />
    <string name="weather_info_will_be_displayed_here" />
    <string name="hello_world">\n</string>
    <string name="Mon">Mon</string>
    <string name="Tue">Tue</string>
    <string name="Wed">Wed</string>
    <string name="Thu">Thu</string>
    <string name="Fri">Fri</string>
    <string name="Sat">Sat</string>
    <string name="Sun">Sun</string>
    <string name="weather_icon" />
    <string name="_25_c">25°C</string>
    <string name="usth_weather">USTH Weather</string>
    <string name="usthweather">USTH Weather</string>
    <string name="partly_cloudy">Partly Cloudy\n24C - 31C</string>
    <string name="showers">Showers</string>
    <string name="rain">Rain</string>
    <string name="scattered_showers">Scattered Showers</string>
    <string name="mostly_cloudy">Mostly Cloudy</string>
    <string name="thunderstorms">Thunderstorms</string>
    <string name="scattered_thunderstorms">Scattered Thunderstorms</string>
    <string name="showers_n24c_31c">Showers\n24C - 31C</string>
    <string name="rain_n22c_23c">Rain\n22C - 23C</string>
    <string name="scattered_showers_n22c_27c">Scattered Showers\n22C - 27C</string>
    <string name="mostly_cloudy_n22c_30c">Mostly Cloudy\n22C - 30C</string>
    <string name="partly_cloudy_n24c_31c">Partly Cloudy\n24C - 31C</string>
    <string name="thunderstorms_n25c_28c">Thunderstorms\n25C - 28C</string>
    <string name="scattered_thunderstorms_n24c_27c">Scattered Thunderstorms\n24C - 27C</string>
    <string name="scattered_thunderstorms_n23c_27c">Scattered Thunderstorms\n23C - 27C</string>
    <string name="showers_n24c_26c">Showers\n24C - 26C</string>
    <string name="settings_icon" />
    <string name="_12c_cloudy">12C\nCloudy</string>
    <string name="paris">Paris</string>
    <string name="tablayout">TabLayout</string>
    <string name="viewpager">ViewPager</string>
    <string-array name="update_interval_entries">
        <item>5 minutes</item>
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
    </string-array>

    <string-array name="update_interval_values">
        <item>5</item>
        <item>15</item>
        <item>30</item>
        <item>60</item>
    </string-array>
</resources>