<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginLeft="@dimen/forecast_margin"
    android:layout_marginRight="@dimen/forecast_margin"
    android:orientation="vertical"
    android:background="#E3E3F3"
    tools:context=".ForecastFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/day_background_color"
        android:orientation="horizontal"
        android:layout_gravity="center">

        <TextView
            android:layout_width="@dimen/day_text_width"
            android:layout_height="@dimen/day_text_height"
            android:text="@string/Mon"
            android:gravity="center"
            android:textColor="@color/text_color"
            android:textSize="@dimen/day_text_size" />

        <ImageView
            android:layout_width="@dimen/weather_icon_size"
            android:layout_height="@dimen/weather_icon_size"
            android:layout_marginEnd="@dimen/weather_icon_margin"
            android:layout_gravity="center"
            android:contentDescription="@string/weather_icon"
            android:src="@drawable/partly_cloudy" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center_vertical"
            android:textColor="@color/text_color"
            android:text="@string/partly_cloudy"
            android:textSize="15sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#ECEEFF"
        android:orientation="horizontal">

        <TextView
            android:layout_width="@dimen/day_text_width"
            android:layout_height="@dimen/day_text_height"
            android:text="@string/Tue"
            android:gravity="center"
            android:textColor="@color/text_color"
            android:textSize="@dimen/day_text_size" />

        <ImageView
            android:layout_width="@dimen/weather_icon_size"
            android:layout_height="@dimen/weather_icon_size"
            android:layout_marginEnd="@dimen/weather_icon_margin"
            android:layout_gravity="center"
            android:contentDescription="@string/weather_icon"
            android:src="@drawable/rainy" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:layout_gravity="center"
            android:textColor="@color/text_color"
            android:text="@string/showers_n24c_31c"
            android:textSize="15sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#ECEEFF"
        android:orientation="horizontal">

        <TextView
            android:layout_width="@dimen/day_text_width"
            android:layout_height="@dimen/day_text_height"
            android:text="@string/Wed"
            android:gravity="center"
            android:textColor="@color/text_color"
            android:textSize="@dimen/day_text_size" />

        <ImageView
            android:layout_width="@dimen/weather_icon_size"
            android:layout_height="@dimen/weather_icon_size"
            android:layout_marginEnd="@dimen/weather_icon_margin"
            android:layout_gravity="center"
            android:contentDescription="@string/weather_icon"
            android:src="@drawable/rainy" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:layout_gravity="center"
            android:textColor="@color/text_color"
            android:text="@string/rain_n22c_23c"
            android:textSize="15sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#ECEEFF"
        android:orientation="horizontal">

        <TextView
            android:layout_width="@dimen/day_text_width"
            android:layout_height="@dimen/day_text_height"
            android:gravity="center"
            android:textColor="@color/text_color"
            android:textSize="@dimen/day_text_size"
            android:text="@string/Thu" />

        <ImageView
            android:layout_width="@dimen/weather_icon_size"
            android:layout_height="@dimen/weather_icon_size"
            android:layout_marginEnd="@dimen/weather_icon_margin"
            android:layout_gravity="center"
            android:contentDescription="@string/weather_icon"
            android:src="@drawable/cloud" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:layout_gravity="center"
            android:textColor="@color/text_color"
            android:text="@string/scattered_showers_n22c_27c"
            android:textSize="15sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#ECEEFF"
        android:orientation="horizontal">

        <TextView
            android:layout_width="@dimen/day_text_width"
            android:layout_height="@dimen/day_text_height"
            android:gravity="center"
            android:textColor="@color/text_color"
            android:textSize="@dimen/day_text_size"
            android:text="@string/Fri" />

        <ImageView
            android:layout_width="@dimen/weather_icon_size"
            android:layout_height="@dimen/weather_icon_size"
            android:layout_marginEnd="@dimen/weather_icon_margin"
            android:layout_gravity="center"
            android:contentDescription="@string/weather_icon"
            android:src="@drawable/partly_cloudy" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:layout_gravity="center"
            android:textColor="@color/text_color"
            android:text="@string/mostly_cloudy_n22c_30c"
            android:textSize="15sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#ECEEFF"
        android:orientation="horizontal">

        <TextView
            android:layout_width="@dimen/day_text_width"
            android:layout_height="@dimen/day_text_height"
            android:gravity="center"
            android:textColor="@color/text_color"
            android:textSize="@dimen/day_text_size"
            android:text="@string/Sat" />

        <ImageView
            android:layout_width="@dimen/weather_icon_size"
            android:layout_height="@dimen/weather_icon_size"
            android:layout_marginEnd="@dimen/weather_icon_margin"
            android:layout_gravity="center"
            android:contentDescription="@string/weather_icon"
            android:src="@drawable/partly_cloudy" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:layout_gravity="center"
            android:textColor="@color/text_color"
            android:text="@string/partly_cloudy_n24c_31c"
            android:textSize="15sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#ECEEFF"
        android:orientation="horizontal">

        <TextView
            android:layout_width="@dimen/day_text_width"
            android:layout_height="@dimen/day_text_height"
            android:gravity="center"
            android:textColor="@color/text_color"
            android:textSize="@dimen/day_text_size"
            android:text="@string/Sun" />

        <ImageView
            android:layout_width="@dimen/weather_icon_size"
            android:layout_height="@dimen/weather_icon_size"
            android:layout_marginEnd="@dimen/weather_icon_margin"
            android:layout_gravity="center"
            android:contentDescription="@string/weather_icon"
            android:src="@drawable/thunderstorm" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/text_color"
            android:gravity="center_vertical"
            android:layout_gravity="center"
            android:text="@string/thunderstorms_n25c_28c"
            android:textSize="15sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#ECEEFF"
        android:orientation="horizontal">

        <TextView
            android:layout_width="@dimen/day_text_width"
            android:layout_height="@dimen/day_text_height"
            android:gravity="center"
            android:textColor="@color/text_color"
            android:textSize="@dimen/day_text_size"
            android:text="@string/Mon" />

        <ImageView
            android:layout_width="@dimen/weather_icon_size"
            android:layout_height="@dimen/weather_icon_size"
            android:layout_marginEnd="@dimen/weather_icon_margin"
            android:layout_gravity="center"
            android:contentDescription="@string/weather_icon"
            android:src="@drawable/cloud" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/text_color"
            android:gravity="center_vertical"
            android:layout_gravity="center"
            android:text="@string/scattered_thunderstorms_n24c_27c"
            android:textSize="15sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#ECEEFF"
        android:orientation="horizontal">

        <TextView
            android:layout_width="@dimen/day_text_width"
            android:layout_height="@dimen/day_text_height"
            android:gravity="center"
            android:textColor="@color/text_color"
            android:textSize="@dimen/day_text_size"
            android:text="@string/Tue" />

        <ImageView
            android:layout_width="@dimen/weather_icon_size"
            android:layout_height="@dimen/weather_icon_size"
            android:layout_marginEnd="@dimen/weather_icon_margin"
            android:layout_gravity="center"
            android:contentDescription="@string/weather_icon"
            android:src="@drawable/rainy" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:textColor="@color/text_color"
            android:layout_gravity="center"
            android:text="@string/showers_n24c_26c"
            android:textSize="15sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#ECEEFF"
        android:orientation="horizontal">

        <TextView
            android:layout_width="@dimen/day_text_width"
            android:layout_height="@dimen/day_text_height"
            android:gravity="center"
            android:textColor="@color/text_color"
            android:textSize="@dimen/day_text_size"
            android:text="@string/Wed" />

        <ImageView
            android:layout_width="@dimen/weather_icon_size"
            android:layout_height="@dimen/weather_icon_size"
            android:layout_marginEnd="@dimen/weather_icon_margin"
            android:layout_gravity="center"
            android:contentDescription="@string/weather_icon"
            android:src="@drawable/cloud" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/text_color"
            android:gravity="center_vertical"
            android:layout_gravity="center"
            android:text="@string/scattered_thunderstorms_n23c_27c"
            android:textSize="15sp" />

    </LinearLayout>

</LinearLayout>